Remove top margin for 1st heading

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,11 @@
       background-size: cover;
     }
 
+    main h1:first-child,
+    main h2:first-child {
+      margin-top: 0
+    }
+
     twitter-widget {
       margin-left: auto;
       margin-right: auto;
