--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,7 +6,7 @@
 
   <title>%TITLE%</title>
   <meta name="description" content="%DESCRIPTION%" />
-  <meta name="theme-color" content="#44337a" />
+  <meta name="theme-color" content="#000000" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <link rel="stylesheet" href="https://unpkg.com/tailwindcss@1.0.1/dist/tailwind.min.css" />
